# mate-dock-applet

./: autogen.sh  configure.ac
po/: POTFILES.in  zh_CN.po
src/: Makefile.am  dock.py  dock_about.py  dock_applet.py  dock_custom_launcher.py  dock_win_list.py  docked_app.py  org.mate.panel.DockApplet.mate-panel-applet.in  org.mate.panel.applet.DockAppletFactory.service.in
